--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ certifi = "*"
 tzdata = "*"
 datawrapper = "~=0.5.3"
 fastparquet = "2023.10.1"
+python-slugify = "*"
 
 [dev-packages]
 click = "~=8.1"
