--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ tzdata = "*"
 datawrapper = "~=0.6.0"
 fastparquet = "2023.10.1"
 python-slugify = "*"
+babel = "*"
 
 [dev-packages]
 click = "~=8.1"
