🚑 Use existing Datawrapper API key for now

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,3 +87,4 @@ jobs:
           NASA_WALDBRANDDATEN_MAUI_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_MAUI_CHART_ID }}
           NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN }}
           NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID }}
+          TALSPERREN_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN }}
