--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ datawrapper = "~=0.6.0"
 fastparquet = "2023.10.1"
 python-slugify = "*"
 babel = "*"
+pydantic = "~=2.9.2"
 
 [dev-packages]
 click = "~=8.1"
