🎉 Add DIVI Intensivregister scraper

--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -161,5 +161,26 @@
             }
         ],
         "extra_env": []
+    },
+    {
+        "display_name": "DIVI Intensivregister",
+        "module_name": "divi_intensivregister",
+        "description": "Mirrors data from https://github.com/robert-koch-institut/Intensivkapazitaeten_und_COVID-19-Intensivbettenbelegung_in_Deutschland and applies some transformations for display in Datawrapper",
+        "contact_name": "Jannes Höke",
+        "contact_email": "mail@jhoeke.de",
+        "memory_size": "1024",
+        "ephemeral_storage": "512",
+        "preset": "pandas",
+        "events": [
+            {
+                "type": "schedule",
+                "enabled": true,
+                "data": {
+                    "interval": "custom",
+                    "interval_custom": "cron(0 13,14 * * ? *)"
+                }
+            }
+        ],
+        "extra_env": []
     }
 ]
