--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -182,5 +182,26 @@
             }
         ],
         "extra_env": []
+    },
+    {
+        "display_name": "whitehouse.gov",
+        "module_name": "whitehouse_gov",
+        "description": "Wir scrapen publizierte Beiträge von https://www.whitehouse.gov/presidential-actions/ und evtl. anderen Unterseiten, um diese zu analysieren\n",
+        "contact_name": "Jannes Höke",
+        "contact_email": "mail@jhoeke.de",
+        "memory_size": "512",
+        "ephemeral_storage": "512",
+        "preset": "minimal",
+        "events": [
+            {
+                "type": "schedule",
+                "enabled": true,
+                "data": {
+                    "interval": "daily",
+                    "interval_custom": null
+                }
+            }
+        ],
+        "extra_env": []
     }
 ]
