--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ fastparquet = "2023.10.1"
 python-slugify = "*"
 babel = "*"
 pydantic = "~=2.9.2"
+truthbrush = "*"
 
 [dev-packages]
 click = "~=8.1"
