Fixed env issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,3 +88,5 @@ jobs:
           NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN }}
           NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID }}
           TALSPERREN_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN }}
+          DB_CLIENT_ID: ${{ secrets.DB_CLIENT_ID}}
+          DB_API_KEY: ${{ secrets.DB_API_KEY}}
