Fixed interval issue, changed to AWS format | Bahn Fasta Scraper

--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -228,7 +228,7 @@
                 "enabled": true,
                 "data": {
                     "interval": "custom",
-                    "interval_custom": "cron(*/5 * * * *)"
+                    "interval_custom": "rate(5 minutes)"
                 }
             }
         ],
