💚 Remove extra env for unused locator map

--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -257,11 +257,7 @@
                 }
             }
         ],
-        "extra_env": [
-            "LANUK_KARTE_DATAWRAPPER_TOKEN",
-            "LANUK_KARTE_CHART_ID_BASE",
-            "LANUK_KARTE_CHART_ID_LIVE"
-        ],
+        "extra_env": [],
         "deploy": true
     }
 ]
