⚡️ Remove useless babel data to optimize Lambda bundle size

--- a/serverless.part.yml
+++ b/serverless.part.yml
@@ -25,6 +25,8 @@ custom:
       # googleapiclient/discovery_cache/documents contains about 60MB of JSON
       # We only want to take what we need here
       - "googleapiclient/discovery_cache/documents/!(bigquery.v2.json)"
+      # babel includes ~28MB of locale data; we only need German and English
+      - "babel/locale-data/!(en*|de*)"
 
     # These are available on the default Python Lambda image
     noDeploy:
